[gd_scene load_steps=23 format=3 uid="uid://tdpuab6wo04l"]

[ext_resource type="Script" path="res://code/Menu.gd" id="1_mm7fr"]
[ext_resource type="Shader" path="res://shaders/moving_menu.gdshader" id="2_ed1n0"]
[ext_resource type="Texture2D" uid="uid://dravm6dli77kc" path="res://images/bg.png" id="3_hm6j2"]
[ext_resource type="Shader" path="res://shaders/intro_windws.gdshader" id="4_uvgkk"]
[ext_resource type="Texture2D" uid="uid://dkvci1chonna6" path="res://images/windows.png" id="5_bquqp"]
[ext_resource type="Shader" path="res://shaders/moving_columns.gdshader" id="6_jn6w5"]
[ext_resource type="Texture2D" uid="uid://cnlwimxtre7yi" path="res://images/test_cols.png" id="7_1oky4"]
[ext_resource type="Theme" uid="uid://3ny4m17to87t" path="res://Default.tres" id="8_df72t"]
[ext_resource type="FontFile" uid="uid://dje7nt7quhun8" path="res://fonts/PressStart2P-Regular.ttf" id="9_1drgl"]
[ext_resource type="Texture2D" uid="uid://cqtxqtmghug5m" path="res://images/3.png" id="10_4whiy"]
[ext_resource type="AudioStream" uid="uid://bmf2n8foh7nmo" path="res://music/Damned_Cathedra.mp3" id="11_dh5ek"]
[ext_resource type="AudioStream" uid="uid://ch8nwp7nneatp" path="res://music/ui_hover1.mp3" id="12_h0i1q"]
[ext_resource type="AudioStream" uid="uid://b1eap41opp8eb" path="res://music/ui_press.mp3" id="13_2aud1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_euw8f"]
shader = ExtResource("2_ed1n0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jcjhn"]
shader = ExtResource("4_uvgkk")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0k6h6"]
shader = ExtResource("6_jn6w5")

[sub_resource type="Animation" id="Animation_bk6vo"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/transition/black screen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p2vmv"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/transition/black screen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8p0el"]
_data = {
"fade_in": SubResource("Animation_bk6vo"),
"fade_out": SubResource("Animation_p2vmv")
}

[sub_resource type="Animation" id="Animation_ld56l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6hi56"]
resource_name = "title_animation"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_stwfa"]
_data = {
"RESET": SubResource("Animation_ld56l"),
"title_animation": SubResource("Animation_6hi56")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_mm7fr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_euw8f")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hm6j2")
stretch_mode = 1

[node name="windows" type="TextureRect" parent="CanvasLayer/TextureRect"]
material = SubResource("ShaderMaterial_jcjhn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_bquqp")

[node name="columns" type="TextureRect" parent="CanvasLayer/TextureRect"]
material = SubResource("ShaderMaterial_0k6h6")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 4
texture = ExtResource("7_1oky4")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GRAJ" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = 46.0
offset_right = 155.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../WYJDZ")
theme = ExtResource("8_df72t")
theme_override_fonts/font = ExtResource("9_1drgl")
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="TWORCY" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = 139.0
offset_right = 155.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_df72t")
theme_override_fonts/font = ExtResource("9_1drgl")
theme_override_font_sizes/font_size = 30
text = "CREDITS"

[node name="WYJDZ" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = 231.0
offset_right = 155.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../GRAJ")
theme = ExtResource("8_df72t")
theme_override_fonts/font = ExtResource("9_1drgl")
theme_override_font_sizes/font_size = 30
text = "EXIT"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -20.0
offset_right = 20.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer"]
position = Vector2(0, -199)
scale = Vector2(3, 3)
texture = ExtResource("10_4whiy")
hframes = 7

[node name="transition" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_8p0el")
}

[node name="black screen" type="ColorRect" parent="CanvasLayer/transition"]
visible = false
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/transition"]
stream = ExtResource("11_dh5ek")
volume_db = -5.0
autoplay = true

[node name="logo_wave" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer/HBoxContainer/Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_stwfa")
}

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_h0i1q")

[node name="press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2aud1")

[connection signal="focus_entered" from="CanvasLayer/Control/GRAJ" to="." method="_on_graj_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/Control/GRAJ" to="." method="_on_graj_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/GRAJ" to="." method="_on_graj_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/TWORCY" to="." method="_on_tworcy_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/Control/TWORCY" to="." method="_on_tworcy_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/TWORCY" to="." method="_on_tworcy_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/WYJDZ" to="." method="_on_wyjdz_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/Control/WYJDZ" to="." method="_on_wyjdz_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/WYJDZ" to="." method="_on_wyjdz_pressed"]
[connection signal="finished" from="press" to="." method="_on_press_finished"]
